code/dotnet/SecuritizedDerivativesAPIforDigitalPortals/v4/docs/InlineResponse2005DataKnockIn.md
# FactSet.SDK.SecuritizedDerivativesAPIforDigitalPortals.Model.InlineResponse2005DataKnockIn
Values and value ranges related to the knock-in.

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Observation** | [**List&lt;PostSecuritizedDerivativeNotationScreenerValueRangesGetDataKnockInObservationItems&gt;**](PostSecuritizedDerivativeNotationScreenerValueRangesGetDataKnockInObservationItems.md) | Values of the barrier observation modality. | [optional] 
**Value** | [**InlineResponse2005DataKnockInValue**](InlineResponse2005DataKnockInValue.md) |  | [optional] 
**Distance** | [**InlineResponse2005DataKnockInDistance**](InlineResponse2005DataKnockInDistance.md) |  | [optional] 
**Breached** | [**List&lt;PostSecuritizedDerivativeNotationScreenerValueRangesGetDataKnockInBreachedItems&gt;**](PostSecuritizedDerivativeNotationScreenerValueRangesGetDataKnockInBreachedItems.md) | Indicates whether securitized derivatives with a breached and with a non-breached knock-in barrier are among the results. | [optional] 
**CashFlow** | [**InlineResponse2005DataKnockInCashFlow**](InlineResponse2005DataKnockInCashFlow.md) |  | [optional] 

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

